# mlir-learning

./: README.md
mlir-official-toy-tutorial/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/docs/: chapter-01.md  chapter-02.md  chapter-03.md  chapter-04.md  chapter-05.md  chapter-06.md  chapter-07.md
mlir-official-toy-tutorial/src/chapter-01/: CMakeLists.txt  README.md  toyc.cpp
mlir-official-toy-tutorial/src/chapter-01/include/toy/: AST.h
mlir-official-toy-tutorial/src/chapter-01/toy/parser/: AST.cpp
mlir-official-toy-tutorial/src/chapter-02/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/src/chapter-02/test/: scalar.toy
mlir-official-toy-tutorial/src/chapter-03/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/src/chapter-04/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/src/chapter-05/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/src/chapter-06/: CMakeLists.txt  README.md
mlir-official-toy-tutorial/src/chapter-07/: CMakeLists.txt  README.md
